--- a/views/login/index.html
+++ b/views/login/index.html
@@ -42,7 +42,7 @@
                 <p id="error-text" class="text-sm text-red-600"></p>
             </div>
 
-            <a href="/resetPassword">Olvide mi contraseña</a>
+            <!-- <a href="/resetPassword">Olvide mi contraseña</a> -->
 
             <button 
             id="form-btn"
